--- a/appdae_04/src/capa_presentacion/frmManMarca.form
+++ b/appdae_04/src/capa_presentacion/frmManMarca.form
@@ -160,6 +160,9 @@
               <Image iconType="3" name="/Recursos/Recursos/buscarMarca.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuscarActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -197,6 +200,9 @@
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblMarcasMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
