--- a/appdae_06/src/capa_presentacion/frmMenu.form
+++ b/appdae_06/src/capa_presentacion/frmMenu.form
@@ -87,6 +87,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mnuManProducto">
               <Properties>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="99" green="66" red="0" type="rgb"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Producto"/>
               </Properties>
               <Events>
