--- a/appdae_07/src/capa_presentacion/jdRepProductos.form
+++ b/appdae_07/src/capa_presentacion/jdRepProductos.form
@@ -61,7 +61,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="66" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Lista de marcas"/>
+        <Property name="text" type="java.lang.String" value="Lista de Productos"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnCerrar">
