--- a/appdae_07/src/capa_presentacion/mantenimiento/frmManProducto.form
+++ b/appdae_07/src/capa_presentacion/mantenimiento/frmManProducto.form
@@ -560,6 +560,9 @@
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblListadoMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
